Changelog
=========

SVN
---

1.4.0
-----

* Added a customize view so it's possible to select which columns are shown or not

* Removed the "Import organizations or persons" from the groups view, since it was misleading

* Added an update step to add the needed field to all address books that were created before this version

* Added sizes to the photo field for persons, and an update step that will handle the existing objects that were created before this version

* Added some security checks to the import buttons and import view page

* Fixed two province names from Guatemala (Thanks Warren)

1.3.3
-----

* Added the sub-sector field to the columns in the organizations view.

* Did some rework on the advanced search templates (for persons and organizations).

* Fixed the referencebrowser_popup template that wasn't showing content when
re-editing a person or a group.

* Fixed bug where drop down fields will not update their content when editing
inline.

* Fixed a typo in spanish translation ("Eportar" instead of "Exportar").

* Added a css to override Plone's default behaviour when editing a drop down
field inline (it repeats the field label).

1.3.2
-----

* Included a custom referencobrowser_popup to show only objects that are
  allowed to be referenced inside the reference browser pop up.
  (Used when relating a person with an organization for example)

1.3.1
-----

* Fixed display issues with rich text fields

* Added sector and subsector drop downs to the advanced organizations search

* Added a "Go back" link, when doing a quick search.

* [FIXED] was using the same id for translating both work and personal email
  in the search for persons template.

* Replaced the way content was retrieved for the views. Now it uses the catalog
  and, in the case of the persons, it uses the advanced query capabilities
  so it will sort using last name first and then first name.

* Added 2 sortable fields to the catalog, one for the last name and the other