@@ -1,14 +1,13 @@
 <?xml version="1.0"?>
 <object name="portal_skins" allow_any="False" cookie_persistence="False"
-   default_skin="Collective_contacts Theme">
+   default_skin="Plone Default">
 
  <object name="collective_contacts_templates"
     meta_type="Filesystem Directory View"
     directory="collective.contacts:skins/collective_contacts_templates"/>
 
- <skin-path name="Collective_contacts Theme" based-on="Plone Default">
-  <layer name="collective_contacts_templates"
-     insert-after="custom"/>
+ <skin-path name="*">
+  <layer name="collective_contacts_templates" insert-after="custom"/>
  </skin-path>
 
 </object>
